--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ repositories {
 
 
 dependencies {
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.+'
     compile group: 'commons-io', name: 'commons-io', version: '2.+'
-    compile 'org.apache.commons:commons-lang3:3.+'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.+'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
